# quorum

./: .fastembed_cache  .gitignore  .mcp.json  .notion-sync.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  build.rs  deny.toml
.cargo/: audit.toml
.claude/: settings.local.json
.claude/skills/: quorum-cli.md
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml  codeql.yml  deny.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AST_PATTERNS_INVENTORY.md  BENCHMARK.md  GUIDE.md  HOW_IT_WORKS.md  MODEL_COMPARISON.md  TEST_STRATEGY.md  feedback-mining-2026-04.csv  feedback-mining-2026-04.md  feedback-pattern-mining.md  feedback-tp-analysis.md
docs/mining/: PROMPT.md  ROLLUP.md  bash.candidates.json  bash.input.json  javascript.candidates.json  javascript.input.json  python.candidates.json  python.input.json  run_mining.py  rust.candidates.json  rust.input.json  typescript.candidates.json  typescript.input.json  yaml.candidates.json  yaml.input.json
docs/plans/: 2026-03-25-v05-intelligence-upgrade.md  2026-03-25-v06-tuning-and-validation.md  2026-03-26-v06-agent-loop.md  2026-03-30-yaml-ha-support.md  2026-03-30-yaml-pattern-research.md  2026-04-01-bash-dockerfile-support.md  2026-04-13-ast-grep-library-integration.md  2026-04-19-reviews-jsonl-and-stats-dimensions.md  2026-04-20-quorum-context-design.md  2026-04-20-quorum-context-implementation.md  2026-04-22-issue-29-context7-deps-design.md  2026-04-22-issue-29-context7-deps.md  2026-04-22-issue-29-test-coverage-review.md  2026-04-24-external-feedback-ingestion-design.md  2026-04-24-external-feedback-ingestion-plan.md  2026-04-24-issue-29-followup-antipattern-review.md  2026-04-24-issue-29-followup-test-plan.md  2026-04-25-issue-81-async-permit.md  2026-04-29-drain-inbox-symlink-cap.md  2026-04-29-issue-117-retry-timeout.md  2026-04-29-issue-119-ssrf-cred-leak.md  2026-04-29-issue-119-test-plan.md  2026-04-29-issue-123-fpkind-design.md  2026-04-29-issue-123-fpkind.md  2026-04-29-issue-129-mcp-spawn-blocking-design.md  2026-04-29-issue-129-mcp-spawn-blocking.md  2026-04-30-self-review-bugfix-batch.md  2026-05-01-batch-3-hydration-and-agent-bugs.md  2026-05-01-calibrator-precision-and-cleanup.md  2026-05-01-track-b-severity-change-reason.md  2026-05-02-batch-4-hydration-agent-bugs-design.md  2026-05-02-batch-4-hydration-agent-bugs.md  2026-05-04-fuzzy-title-matching-design.md  2026-05-04-fuzzy-title-matching.md  2026-05-04-pr3-threshold-calibration-design.md  2026-05-04-pr3-threshold-calibration.md  2026-05-05-prose-review-implementation.md  2026-05-05-prose-review-modes.md  AGENT_LOOP_TEST_REVIEW.md  test-plan-calibrator-cap.md  (+5 more)
docs/test-plans/: 2026-04-29-drain-inbox-symlink-cap.md
examples/: compare_calibration.rs  compare_retrieval.rs
mutants.out/: lock.json  mutants.json
rules/bash/: predictable-tmp.yml  toctou-lock-touch.yml  unquoted-variable.yml  unsafe-grep-variable.yml
rules/hcl/: iam-wildcard-action.yml  iam-wildcard-resource.yml
rules/javascript/: bind-all-interfaces.yml  bind-in-add-event-listener.yml  bind-in-event-listener.yml  console-log-artifact.yml
rules/python/: assert-in-prod-code.yml  bare-except-pass.yml  bind-all-interfaces.yml  blocking-call-in-async.yml  broad-exception-catch.yml  eval-exec-non-literal.yml  fastapi-unbounded-pagination.yml  flask-debug-true.yml  insecure-file-permissions.yml  md5-usage.yml  mutation-during-iteration.yml  naive-url-blacklist.yml  non-threadsafe-singleton.yml  open-no-encoding.yml  re-compile-in-loop.yml  requests-verify-false.yml  resource-no-context-manager.yml  sqlalchemy-raw-query.yml  subprocess-no-check.yml  subprocess-shell-true.yml  urlopen-no-context-manager.yml
rules/rust/: block-on-in-async.yml  builder-unwrap-or-default.yml  expect-empty-message.yml  handle-block-on-no-flavor-check.yml  ignored-io-result.yml  silent-error-conversion.yml  string-byte-slice.yml
rules/typescript/: as-any-cast.yml  bare-catch.yml  cors-wildcard-origin.yml  eval-non-literal.yml  json-parse-as-type.yml  non-literal-regexp.yml  non-null-assertion.yml  nullish-coalescing-preferred.yml  path-traversal-join.yml  promise-async-executor.yml  sql-template-injection.yml  sync-in-async.yml  (+3 more)
scripts/: check_precision.py  test_check_precision.py
src/: agent.rs  analysis.rs  analytics.rs  ast_grep.rs  auto_calibrate.rs  cache.rs  calibrate.rs  calibrator.rs  calibrator_fingerprint.rs  calibrator_trace.rs  category.rs  cli_io.rs  config.rs  context_enrichment.rs  daemon.rs  dep_manifest.rs  dimensions.rs  domain.rs  embeddings.rs  feedback.rs  feedback_index.rs  finding.rs  formatting.rs  glyphs.rs  grounding.rs  http_server.rs  hydration.rs  lib.rs  linter.rs  llm_client.rs  main.rs  merge.rs  metrics.rs  parser.rs  patterns.rs  pipeline.rs  progress.rs  prompt_sanitize.rs  prose_prompts.rs  redact.rs  (+11 more)
src/cli/: mod.rs
tests/: calibrate_backfill.rs  calibrator_pre_refactor_snapshot.rs  category_enum_test.rs  cli.rs  cli_context_stdout_handling.rs  cli_feedback_agent.rs  cli_inbox_drain.rs  context_cli.rs  cross_path_equivalence.rs  doctor_exit_code.rs  finding_schema_test.rs  lib_integration_smoke.rs  parallel_review.rs  review_log.rs  stats_dimensions.rs  stats_hard_fail.rs
(+148 files in other folders)
