[package]
name = "quorum"
version = "0.1.0"
edition = "2024"
description = "Multi-source code review: LLM ensemble + local AST analysis + linter orchestration"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP + serialization
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# URL parsing
url = "2"

# LLM structured output
dspy-rs = "0.7"

# Secret redaction
regex = "1"

# Caching
lru = "0.12"
sha2 = "0.10"
hex = "0.4"

# MCP server
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio"] }
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# File watching
notify = "7"

# Tree-sitter (core + language grammars)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
test-case = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
strip = true
