[package]
name = "quorum"
version = "0.18.4"
edition = "2024"
# `if let` chains used in src/cli_io.rs and src/context/cli.rs stabilized
# in Rust 1.88. Edition 2024 already requires 1.85+, but document the
# actual minimum explicitly.
rust-version = "1.88"
description = "Multi-source code review: LLM ensemble + local AST analysis + linter orchestration"
license = "MIT"
repository = "https://github.com/jsnyder/quorum"
homepage = "https://github.com/jsnyder/quorum"
keywords = ["code-review", "ast", "llm", "linter", "mcp"]
categories = ["development-tools", "command-line-utilities"]

[features]
default = ["embeddings"]
embeddings = ["fastembed"]

[dependencies]
# Local embeddings (optional)
fastembed = { version = "5", optional = true }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP + serialization
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
fs2 = "0.4"
thiserror = "2"

# HTTP date parsing (Retry-After header)
httpdate = "1"

# URL parsing
url = "2"

# Secret redaction
regex = "1"

# Caching
lru = "0.17"
sha2 = "0.11"
hex = "0.4"

# MCP server
rust-mcp-sdk = { version = "0.9", default-features = false, features = ["server", "macros", "stdio"] }
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# ULID for unique review run IDs (enables exact joins across jsonl logs)
ulid = { version = "1", features = ["serde"] }

# File watching
notify = "7"

# HTTP daemon
axum = "0.8"
tower = "0.5"

# Tree-sitter (core + language grammars)
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.25"
tree-sitter-hcl = "1.1"
tree-sitter-language = "0.1"

# ast-grep (compiled-in rule engine)
ast-grep-core = "=0.42.1"
ast-grep-config = "=0.42.1"
ast-grep-language = { version = "=0.42.1", default-features = false, features = [
    "tree-sitter-bash",
    "tree-sitter-hcl",
    "tree-sitter-javascript",
    "tree-sitter-python",
    "tree-sitter-rust",
    "tree-sitter-typescript",
    "tree-sitter-yaml",
] }

# Structured tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Suppression config
toml = "1"
glob = "0.3"
bm25 = "2.3.2"

# Markdown parsing (context feature: doc chunk extraction)
pulldown-cmark = "0.13"

# Filesystem walking (context feature: source extraction dispatch)
walkdir = "2"

# SQLite + vector search (context feature: chunk index with FTS5 and vec0)
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
sqlite-vec = "0.1"
libc = "0.2.186"
# tree-sitter-dockerfile grammar is vendored in grammars/ and compiled via build.rs
# (the crate depends on tree-sitter 0.20 which conflicts with 0.25)

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"
assert_cmd = "2"
predicates = "3"
test-case = "3"
tempfile = "3"
insta = { version = "1", features = ["json"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
strip = true
